--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.1",
 		"mongoose": "^5.12.2",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.2",
 		"nodemailer": "^6.5.0",
 		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
 		"sharp": "^0.27.2",
 		"uuid": "^8.3.2"
