--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"bcryptjs": "^2.4.3",
 		"concurrently": "^6.0.0",
 		"cors": "^2.8.5",
+		"cron": "^1.8.2",
 		"cross-env": "^7.0.3",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
